테스트 커버리지 개선 사항 적용